alignment fix

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ a{
 }
 
 .game{
-  width: 46%;
+  width: 49.5%;
   float: left;
   padding-bottom: 3em;
 }
